# webclaw-calendar

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.jsx  bridge.js  calendar.css  index.html  mini-calendar.jsx  style.css  tasks-panel.jsx  time-grid.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth_commands.rs  calendar_commands.rs  mod.rs
